# FEA3DViewer

./: BeamStressSolid.vtk  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
native/fea/: CMakeLists.txt  FORMAT.md  README.md  build-wasm.ps1
native/fea/examples/: write_example.cpp
native/fea/include/fea/: fea.hpp  fea_c.h
native/fea/src/: fea.cpp
public/samples/: block-example.fea
public/wasm/: fea_reader.wasm
src/: ARCHITECTURE.md  App.css  App.jsx  App.tsx  global.d.ts  index.css  main.tsx
src/app/start-page/: StartPage.tsx  startPage.css
src/components/: Icon.jsx
src/components/Icon/: Icon.jsx
src/controllers/: CameraController.js  InteractionController.js  MeasurementController.js  NavigationGizmo.js  PickingController.js  PickingController.ts  RendererController.js  SceneController.js  SceneController.ts  TextBlockController.ts
src/layouts/: DialogTemplate.jsx  MainLayout.jsx  MainLayout.tsx  ModelTree.jsx  ModelTree.tsx  PropertyPanel.jsx  PropertyPanel.tsx  RibbonButton.jsx  RibbonButton.tsx  SectionDialog.jsx  SectionDialog.tsx  SettingsDialog.jsx  SettingsDialog.tsx  Sidebar.css  Sidebar.jsx  Sidebar.tsx  StatusBar.jsx  StatusBar.tsx  Toolbar.css  Toolbar.jsx  Toolbar.tsx  Viewport.jsx  settingsConfig.js  settingsConfig.ts
src/models/: Actor.js
src/threejsVTK/: .dependency-cruiser.cjs  .editorconfig  .gitattributes  README.md  eslint.config.mjs  examples-Scene.tsx  index.js  package.json
src/viewer/: OrientationTriad.jsx  Scene.jsx  Scene.tsx
tools/: verify-rendering-boundary.mjs
(+224 files in other folders)
